--- a/edit/help.html
+++ b/edit/help.html
@@ -44,13 +44,13 @@ You will see some black frames between the clips. Mark them as 1-frame garbage c
 <p>
 If you open a new *.avi video file, you will see a single timestamp in the text editor.
 <ul>
-<li>Yellow background -- The video stoped at this timestamp.</li>
+<li>Yellow background -- The video shows this timestamp.</li>
 <li>Underline -- New text will be added to this line.</li>
 <li>Red color -- This is an illegal line.</li>
 </ul>
 </p>
 <p>
-To add a clip desctiption, position the video at the first frame of the next clip.<br>
+To add a clip description, position the video at the first frame of the next clip.<br>
 Check the "Add" and the "Autosnap" checkboxes.
 <ul>
 <li>Make sure you see the first frame of the first clip.</li>
@@ -68,9 +68,9 @@ Check the "Add" and the "Autosnap" checkboxes.
 Some videos don't have bare-handed "show" actions. Try to reuse the striptease clips or the second half of the drop/win/lose clips. You can click the "show" button to gererate some candidates.
 </p>
 <p>
-If the video contains only 3 striptease clips, omit "2->1", "0->1" and the "1" radiobuttun.
+If the video contains only 3 striptease clips, omit "2->1", "0->1" and the "1" radiobutton.
 </p>
-<b>Save often!</b> This is an Quick & Dirty tool. No warrenty at all.
+<b>Save often!</b> This is an Quick & Dirty tool. No warranty at all.
 <p>
 </p>
 <h3>Editing an existing timestamp file</h3>
@@ -87,13 +87,13 @@ The return and space keys are also used for the active button. After navigation 
 </p>
 <h3>Enable the snap button</h3>
 <p>
-The clipeditor looks for a file with the extention *.snap2.<br>
+The clipeditor looks for a file with the extension *.snap2.<br>
 This file estimates the difference between the current and previous frame.<br>
 After stopping the videoplayer, the clipeditor snaps back to the frame with the highest difference.<br>
 Most of the time, this is the scene cut.
 </p>
 <p>
-You can make these files with a patched Version of a free linux programm called melt.
+You can make these files with a patched Version of a free linux program called melt.
 </p>
 <p>
 Add a single line with the printf to <nobr>melt/mlt-6.0.0/src/modules/motion_est/filter_motion_est.c</nobr>
