--- a/edit/help.html
+++ b/edit/help.html
@@ -58,7 +58,7 @@ Check the "Add" and the "Autosnap" checkboxes.
 <li>Position the video at the first frame of the next clip.</li>
 <li>Make sure the "4"-"0" radio buttons indicate the number of clothes.</li>
 <li>Make sure the "zoom" checkbox indicates the clipping.</li>
-<li>Click on the button with the most fitting description of the seen clip.</li>
+<li>Click on the button with the most fitting description of the seen clip.<br>(The left video shows the first frame of the clip. The right video the last frame.)</li>
 <li>The clip-editor completes the line and add a new timestamp.</li>
 <li>Repeat until all clips are processed.</li>
 <li>Make sure, there is a marker for a garbage clip after the last clip.</li>
